fixed spacing

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -2001,6 +2001,14 @@ html {
   margin-top: 3.5rem;
 }
 
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .block {
   display: block;
 }
